@@ -1,3 +1,7 @@
+Tue May  2 16:21:57 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>
+
+	* prepare_match() is now actually asynchronous
+
 Tue May  2 14:35:01 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>
 
 	* Changed signature of Match::prepare_match() to allow for
